fixed height problem on firefox mobile, added video feed errors

--- a/css/main.css
+++ b/css/main.css
@@ -678,4 +678,7 @@ i.fa-facebook, i.fa-instagram{
      .map{
          width: 100%;
      }
+     .about-container{
+         height: auto;
+     }
 }
